# StudyBud

./: db.sqlite3  pyproject.toml
