[tool.poetry]
name = "studybud"
version = "0.1.0"
description = ""
authors = ["Dennis Ivy <traversymedia@gmail.com>"]
homepage = "https://youtu.be/PtQiiknWUcI"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
Django = "^4.0"
django-cors-headers = "^3.10.1"
djangorestframework = "^3.13.1"
Pillow = "^8.4.0"
pycodestyle = "^2.8.0"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "latest"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
